# DefundsWB

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  UPGRADE_JUPITER.md  jupiter-integration.js  package-lock.json  package.json  render.backend.yaml  render.yaml  test-program.ts  testing.js  tsconfig.json  turbo.json
_bak/jupiter_cpi_local_bak/: Cargo.toml  idl.json
app/trader/: page.tsx
apps/backend/: .idl-hash  package.json  tsconfig.json
apps/web/: eslint.config.mjs  next.config.ts  package.json  tailwind.config.js
docs/: RATE_LIMITING.md
future-implementations/: debug_vault.rs  pay_rwa_investors.rs
programs/managed-funds/: Cargo.toml
programs/managed-funds/src/: errors.rs  lib.rs
programs/managed-funds/src/instructions/: deposit.rs  execute_trade.rs  initialize_fund.rs  mod.rs
programs/managed-funds/src/state/: fund.rs  investor.rs  mod.rs
programs/managed_funds/: Cargo.toml
programs/managed_funds/src/: errors.rs  lib.rs  version.rs
programs/managed_funds/src/instructions/: close_zero_token_accounts.rs  debug_vault.rs  deposit.rs  execute_trade.rs  finalize_withdrawal.rs  initialize_fund.rs  initiate_withdrawal.rs  investor_fund_withdrawal.rs  liquidate_positions.rs  mod.rs  nav_attest_write.rs  pay_fund_investors.rs  pay_rwa_investors.rs  pda_lamports_transfer.rs  pda_token_approve.rs  pda_token_revoke.rs  pda_token_transfer.rs  ping.rs  repair_vault.rs  return_funds.rs  swap.rs  token_swap_vault.rs  unwrap_wsol_fund.rs  update_fund.rs  withdraw.rs  withdraw_swap_instruction.rs  withdraw_swap_router.rs
programs/managed_funds/src/state/: fund.rs  mod.rs  nav.rs  trade.rs  withdrawal.rs
scripts/: anchor-deploy.sh  estimateDeployCost.js  ping_build.ts  returnDebugFunds.ts  scan-secrets.sh  sync-idl.js  sync-idl.ts  validatePayout.ts
src/app/: globals.css  layout.tsx  (+2 more)
(+177 files in other folders)
