[package]
name = "managed-funds"
version = "0.1.0"
description = "Solana program for managed funds"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "managed_funds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
