[package]
name = "managed_funds"
version = "0.1.0"
description = "Solana program for managed funds"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "managed_funds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = ["no-idl", "no-log-ix-name"]
onchain-logs = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[profile.release]
# Optimize for size; enable full LTO and single codegen unit for best size reduction
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
